--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     mysql:
         image: mysql:latest
         container_name: mysql
+        command: --default-authentication-plugin=mysql_native_password
         ports:
             - "3306:3306"
         environment:
